--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
 certifi==2021.10.8
+charset-normalizer==2.0.7
+idna==3.3
 python-dotenv==0.19.1
+requests==2.26.0
+typing-extensions==3.10.0.2
+urllib3==1.26.7
 youtube-dl==2021.6.6
