--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@ certifi==2021.10.8
 charset-normalizer==2.0.7
 idna==3.3
 python-dotenv==0.19.1
-requests==2.26.0
+pytube==11.0.1
 typing-extensions==3.10.0.2
 urllib3==1.26.7
-youtube-dl==2021.6.6
