--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,16 @@
 certifi==2021.10.8
 charset-normalizer==2.0.7
+decorator==4.4.2
 idna==3.3
+imageio==2.10.4
+imageio-ffmpeg==0.4.5
+moviepy==1.0.3
+numpy==1.21.4
+Pillow==8.4.0
+proglog==0.1.9
 python-dotenv==0.19.1
 pytube==11.0.1
+requests==2.26.0
+tqdm==4.62.3
 typing-extensions==3.10.0.2
 urllib3==1.26.7
